app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotplayground-deploy
  labels:
    app: iotplayground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotplayground
  template:
    metadata:
      labels:
        app: iotplayground
    spec:
      containers:
      - name: iotplayground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: wil-playground-deployment
#   namespace: dev
#   labels:
#     app: wil-playground
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: wil-playground
#   template:
#     metadata:
#       labels:
#         app: wil-playground
#     spec:
#       containers:
#       - name: wil-playground
#         image: wil42/playground:v1
#         ports:
#         - containerPort: 8888
