app/jeje.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: playground
# spec:
#   selector:
#     app: playground
#   ports:
#     - protocol: TCP
#       port: 3200
#       targetPort: 8888
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: playground
#   labels:
#     app: playground
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: playground
#   template:
#     metadata:
#       labels:
#         app: playground
#     spec:
#       containers:
#       - name: wil42-playground
#         image: wil42/playground:v1
#         ports:
#         - containerPort: 8888

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  labels:
    app: wil-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
--------
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  type: NodePort
  ports:
  - port: 8888
    nodePort: 30888
    targetPort: 8888
    protocol: TCP
  selector:
    app: wil-playground
