app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iotplayground
  name: iotplayground-service
spec:
  type: ClusterIP
  selector:
    app: iotplayground
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: wil-playground
#   name: wil-playground-service
# spec:
#   type: ClusterIP
#   selector:
#     app: wil-playground
#   ports:
#   - name: http
#     port: 80
#     protocol: TCP
#     targetPort: 8888
