app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wil-playground
  name: wil-playground-service
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
  - name: http
    port: 88
    protocol: TCP
    targetPort: 8888
